--- a/responsive-layout/relative-unit.css
+++ b/responsive-layout/relative-unit.css
@@ -1,5 +1,5 @@
 .top-bar {
-    padding: 0.5rem;
+    padding: 0.75rem;
 }
 .top-bar-text {
     font-size: 1.5rem;
@@ -9,21 +9,35 @@
     padding: 3.75rem;
 }
 .header-title {
-    margin-bottom: 0.8rem;
+    margin-bottom: 1rem;
     font-size: 3rem;
 }
 .header-subtitle {
-    font-size: 1.25rem;
+    font-size: 1.5rem;
 }
 
-@media(max-width: 767px) {
+@media only screen and (max-width: 767px){
     html {
-        font-size: 12px;
+        font-size: 75%;
     }
 }
 
-@media(min-width: 768px) and (max-width: 1024px) {
+/* 大部分平板 */
+@media only screen and (min-width: 768px) and (max-width: 992px) {
     html {
-        font-size: 14px;
+        font-size: 87.5%;
     }
 }
+
+/*!* 大屏mobile和小部分平板 *!*/
+/*@media only screen and (max-width: 767px) and (min-width: 600px) {*/
+/*    html {*/
+/*        font-size: 75%;*/
+/*    }*/
+/*}*/
+/*!* 大部分mobile *!*/
+/*@media only screen and (max-width: 599px) and (orientation: portrait) {*/
+/*    html {*/
+/*        font-size: calc(100/375 * 12vw);  !* mobile 以设计图iphone X尺寸为例： 1px = 100/375vw  12px = 3.2vw = 1rem *!*/
+/*    }*/
+/*}*/
